# qt-udp-sender

./: CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui  README.md
